Fixed code window overflow and image distortion

--- a/portfolio/projectvault/static/assets/css/index.css
+++ b/portfolio/projectvault/static/assets/css/index.css
@@ -328,6 +328,7 @@ footer {
         padding-bottom: 30px;
         margin-bottom: 2%;
         text-align: start;
+        max-width: 30ch;
     }
     
     .contact-btn {
