--- a/portfolio/projectvault/static/assets/css/project_detail.css
+++ b/portfolio/projectvault/static/assets/css/project_detail.css
@@ -1,34 +1,37 @@
 .main-container {
+    max-width: 100vw;
     background-color: #333;
     color: white;
     font-family: 'Poppins';
     padding-bottom: 100px;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .img-container {
     width: 40%;
-    height: 325px;
     max-width: 1000px;
+    height: 325px;
     position: relative;
     margin: 40px auto 0 auto;
-    overflow: hidden; 
-    border-radius: 12px; 
+    overflow: hidden;
+    border-radius: 12px;
 }
 
 .project-img {
     width: 100%;
     height: 100%;
     display: none;
+    object-fit: contain;
     border-radius: 12px;
-    transition: opacity 1s ease; 
+    transition: opacity 1s ease;
 }
 
 .prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%); 
+    transform: translateY(-50%);
     width: auto;
     padding: 16px;
     color: white;
@@ -41,7 +44,7 @@
 
 
 .prev {
-    left: 10px; 
+    left: 10px;
 }
 
 .next {
@@ -57,7 +60,7 @@
     animation-name: fade;
     animation-duration: 1.5s;
 }
-  
+
 @keyframes fade {
 from {opacity: .4}
 to {opacity: 1}
@@ -100,8 +103,7 @@ to {opacity: 1}
 .code-window {
     width: 50%;
     max-width: 750px;
-    max-height: 300px;
-    margin: 20px auto; 
+    margin: 20px auto;
     background-color: #1e1e1e;
     color: #d4d4d4;
     padding: 20px;
@@ -110,12 +112,14 @@ to {opacity: 1}
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     font-family: 'Fira Code', 'Courier New', monospace;
     font-size: 14px;
-    -ms-overflow-style: none;  
+    box-sizing: border-box;
+    word-break: break-word; /* Optional */
+    -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-.code-window::-webkit-scrollbar { 
-    display: none; 
+.code-window::-webkit-scrollbar {
+    display: none;
 }
 
 .content-image {
@@ -134,6 +138,11 @@ to {opacity: 1}
     }
     .code-window {
         width: 90%;
+    }
+    .code-window, pre, code {
+        max-width: 100%;
+        overflow-x: auto;
+        white-space: pre;
     }
 
     .img-container {
